welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	var vert:Boolean=false;
	avance()
	if (getColorSol()==Color.GREEN) {
		vert=true;
	} else { 
		gauche()	
	}
	return vert; 
    // Write your code here
}        
